Edited wiki page QA through web user interface.

--- a/wiki/QA.wiki
+++ b/wiki/QA.wiki
@@ -4,6 +4,13 @@ A:完全不必。如果没有什么问题，您完全不必更新。如果您遇
 
 ----
 
+Q:会不会覆盖我现有的hosts？
+
+A:不会。在文件末尾补上而已，原来的内容继续留着。
+如果有冲突的话，以原来的内容为准。
+
+----
+
 Q:每次我都得下那个exe文件么？
 
 A:不必。只要运行一下那个exe文件，那个exe文件会自动下载服务器上最新的脚本文件。
@@ -12,7 +19,8 @@ A:不必。只要运行一下那个exe文件，那个exe文件会自动下载服
 
 Q:更新速度太快了。
 
-A:是的。但从现在开始，更新速度会降到3天一次。当然，IP失效的话会尽快更新。
+A:是的。但从现在开始，更新速度会降到5天一次。当然，IP失效的话会尽快更新。
+
 
 ----
 
