--- a/wiki/versions.wiki
+++ b/wiki/versions.wiki
@@ -22,4 +22,14 @@ https://smarthosts.googlecode.com/svn/trunk/hostsp_auto.exe
 <br><br>
 <font color="green">[测试]</font> 图形化版一键更新程序提供了各种有用的小功能，新功能飞速加入中。目前可能会有些许问题，如遇到还望在[https://code.google.com/p/smarthosts/issues/list Issues页]或者[https://plus.google.com/101163469761703498966 Google+]里反馈：
 https://smarthosts.googlecode.com/svn/trunk/SmartHosts_Alpha2.exe
-<br><br><br>
+<br><br>
+
+----
+bat版的原理则是下载下面的bat文件并自动以管理员身份运行。如果您想深入了解这个bat文件，不妨点击：
+https://smarthosts.googlecode.com/svn/trunk/hosts.bat
+
+
+bat版的源代码：https://smarthosts.googlecode.com/svn/trunk/downloader_src
+
+您也可以用subversion获取最新的代码：
+http://code.google.com/p/smarthosts/source/checkout
