--- a/wiki/donate.wiki
+++ b/wiki/donate.wiki
@@ -1,7 +1,5 @@
-==我擦，您还真要捐助我们啊==
+==哇，您还真要捐助我们啊==
 
-您的好意我们心领了，但是这钱我们不能拿。
+您的好意我们心领了，但在目前的情况下，SmartHosts的发展并不需要任何捐助。
 
-在目前的情况下，SmartHosts的发展并不需要任何捐助。
-
-如果您真的有钱，不妨买一个VPN/SSH帐号应急，毕竟修改Hosts并不能完全解决GFW问题。
+如果您真的有钱，不妨买一个VPN/SSH帐号应急，毕竟修改Hosts并不能完全解决GFW问题。目前我们需要的，只是您的 <g:plusone size="medium"></g:plusone>
