--- a/wiki/donate.wiki
+++ b/wiki/donate.wiki
@@ -1,7 +1,15 @@
-==哇，您真要捐助我们啊==
+==捐助==
 
-您的好意我们心领了，但在目前的情况下，SmartHosts的发展并不需要任何捐助。（据说项目发起人是土豪）
+感谢您对SmartHosts项目的关注。
 
-您可以将捐助的钱购买一个VPN/SSH帐号体验一下完全翻墙的快感，因为修改Hosts并不能完全解决翻墙的问题。
+目前，我们计划运行一个机器人来监测hosts所指向的服务器并在第一时间做出反应，并利用服务器空闲资源进行另外一种翻墙方式的测试。
 
-+1一下，分享一下，这就足够了～
+因为这个计划至少需要放置一台价格低廉的墙内VPS才能完成，因此您的小额捐助可以帮助我们更好地实行这个计划。
+
+如果您觉得SmartHosts对您有用，请考虑对我们进行捐助。
+
+Paypal收款邮箱: azlyfox#gmail.com (# to @）
+
+当然，您可以将捐助的钱省下来购买一个VPN/SSH帐号体验一下完全翻墙的快感，因为修改Hosts并不能完全解决翻墙的问题。
+
+如您不打算对我们进行捐助，您也可以考虑为这个项目+1一下，分享一下。
